# TwT_Flask_Tutorial

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.OLDER_Versions/: app-1.py  app-2.py
.OLDER_Versions/templetes_old/: index-2.html
templates/: base.html  user.html
