[tool.poetry]
name = "twt-flask-tutorial"
version = "0.1.0"
description = "Learning Flask"
authors = ["Tech with Tim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blinker = "^1.6.2"
click = "^8.1.6"
distlib = "^0.3.7"
filelock = "^3.12.2"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.3"
platformdirs = "^3.9.1"
ranger-fm = "^1.9.3"
SQLAlchemy = "^2.0.19"
typing_extensions = "^4.7.1"
Werkzeug = "^2.3.6"
sqlite4 = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
